column selection working

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+
+
+#root{
+    font-family: 'Poppins';
+    position: relative;
+    /* overflow-x: hidden; */
+}
+
 
 .dropZone{
   border: 2px dashed #cccccc;
@@ -6,4 +15,34 @@
   padding: 20px;
   text-align: center;
   cursor: pointer;
+}
+
+
+.table__container{
+  text-align: center;
+  width: inherit;
+}
+
+table {
+  border-collapse: collapse;
+  overflow: scroll;
+}
+
+td {
+  border: 1px solid black;
+}
+
+table, th{
+  border: 2px solid;
+}
+
+th{
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+th, td {
+  padding: 8px 18px;
+  text-align: left;
+  text-align: center;
 }
