--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,17 @@ th, td {
   text-align: left;
   text-align: center;
 }
+
+.import__csv button{
+  padding: 10px 3rem;
+  margin: 12px 0px;
+  font-family: poppins;
+  font-weight: 600;
+  letter-spacing: 1px;
+  background-color: #f2f2f2;
+}
+
+.import__csv button:hover{
+  background-color: #cccccc;
+  cursor: pointer;
+}
